crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__cut_without_pod.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=cut"
