crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__function_call_with_arrow_subscription.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      HASH_SUBSCRIPT_EXPR
        CALL_EXPR
          SUB_NAME
            identifier "f"
          ARG_LIST
            `(` "("
            LIST_EXPR
            `)` ")"
        `->` "->"
        `{` "{"
        SUBSCRIPT
          SUB_NAME
            identifier "k"
        `}` "}"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      ARRAY_SUBSCRIPT_EXPR
        CALL_EXPR
          SUB_NAME
            identifier "f"
          ARG_LIST
            `(` "("
            LIST_EXPR
            `)` ")"
        `->` "->"
        `[` "["
        SUBSCRIPT
          LITERAL
            number "0"
        `]` "]"
    `;` ";"
