crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__increment_disambiguation.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "foo"
        LIST_EXPR
          POSTFIX_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "x"
            `++` "++"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "foo"
        LIST_EXPR
          POSTFIX_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "count"
            `--` "--"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        LIST_EXPR
          POSTFIX_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "fh"
            `++` "++"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        LIST_EXPR
          POSTFIX_EXPR
            BLOCK_DEREF_EXPR
              `$` "$"
              `{` "{"
              SUB_NAME
                identifier "fh"
              `}` "}"
            `--` "--"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        FILEHANDLE
          SCALAR_VAR
            `$` "$"
            identifier "fh"
        LIST_EXPR
          PREFIX_EXPR
            `++` "++"
            SCALAR_VAR
              `$` "$"
              identifier "x"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        FILEHANDLE
          BLOCK_DEREF_EXPR
            `$` "$"
            `{` "{"
            SUB_NAME
              identifier "fh"
            `}` "}"
        LIST_EXPR
          PREFIX_EXPR
            `++` "++"
            SCALAR_VAR
              `$` "$"
              identifier "x"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        FILEHANDLE
          identifier "STDERR"
        LIST_EXPR
          PREFIX_EXPR
            `++` "++"
            SCALAR_VAR
              `$` "$"
              identifier "errors"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      BLOCK_CALL_EXPR
        SUB_NAME
          identifier "f"
        BLOCK
          `{` "{"
          `}` "}"
        LIST_EXPR
          PREFIX_EXPR
            `++` "++"
            SCALAR_VAR
              `$` "$"
              identifier "x"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      BLOCK_CALL_EXPR
        SUB_NAME
          identifier "f"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              SCALAR_VAR
                `$` "$"
                identifier "_"
          `}` "}"
        LIST_EXPR
          PREFIX_EXPR
            `--` "--"
            SCALAR_VAR
              `$` "$"
              identifier "x"
    `;` ";"
